--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 Será que um dia isso vai melhorar?
                 Talvez sim, talvez nao.
                 Eu amo voce, eu realmente amo.
-                Feliz aniversário, voce merece tudo de bom!
+                Voce merece tudo de bom, o melhor.
+                Talvez nao seja eu.
             </p>
         </div>
     </div>
